<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Fragments.SettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_block"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/settings_user_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:civ_border_width="2dp"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:src="@drawable/ic_default_user"/>



        <TextView
            android:id="@+id/settings_fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            tools:text="@string/settings_default_username"
            android:layout_marginTop="@dimen/vertical_margin"
            android:textSize="@dimen/normal_text"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_user_photo"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"/>


        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccentDark"
            tools:text="@string/settings_default_status"
            android:textSize="@dimen/small_text"
            android:layout_marginStart="@dimen/horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_fullname"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <TextView
        android:id="@+id/settings_text_account"
        android:text="@string/settings_default_account_text"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_header_block"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_changePhone"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_phoneNumber"
            tools:text="@string/settings_default_phone"
            app:layout_constraintTop_toTopOf="@id/settings_btn_changePhone"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_phone_number"
            android:text="@string/settings_label_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/settings_phoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_changeUserName"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_changePhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_username"
            tools:text="@string/settings_default_login"
            app:layout_constraintTop_toTopOf="@id/settings_btn_changeUserName"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_username"
            android:text="@string/settings_label_username"
            app:layout_constraintTop_toBottomOf="@+id/settings_username"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />
        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_changeBio"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_changeUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settingsButtons">

        <TextView
            android:id="@+id/settings_bio"
            tools:text="@string/settings_about_text"
            app:layout_constraintTop_toTopOf="@id/settings_btn_changeBio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/normalText" />
        <TextView
            android:id="@+id/settings_label_bio"
            android:text="@string/settings_label_about_bio"
            app:layout_constraintTop_toBottomOf="@+id/settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/smallText" />

        <View
            app:layout_constraintTop_toBottomOf="@id/settings_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/separator" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/settings_change_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_block"
        android:layout_width="@dimen/settings_btn_change_photo_width"
        android:layout_height="@dimen/settings_btn_change_photo_height"
        android:src="@drawable/ic_camera"/>

</androidx.constraintlayout.widget.ConstraintLayout>